{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 99,
  "lineage": "291a98ce-0db1-84ff-41e6-a3933cbc63b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490167669940:internet-gateway/igw-06a8f1df5f499957d",
            "id": "igw-06a8f1df5f499957d",
            "owner_id": "490167669940",
            "tags": {
              "Name": "terraform-eks-eks"
            },
            "tags_all": {
              "Name": "terraform-eks-eks"
            },
            "vpc_id": "vpc-08bbedd0ada555523"
          },
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490167669940:route-table/rtb-077b9353e55a2e368",
            "id": "rtb-077b9353e55a2e368",
            "owner_id": "490167669940",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a8f1df5f499957d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08bbedd0ada555523"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46ee56861990d79",
            "route_table_id": "rtb-077b9353e55a2e368",
            "subnet_id": "subnet-050e6b249727be632"
          },
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceb226be6a6597d7",
            "route_table_id": "rtb-077b9353e55a2e368",
            "subnet_id": "subnet-0d4a1ba5b23e22716"
          },
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490167669940:security-group/sg-0fc53b6d53f841fd0",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc53b6d53f841fd0",
            "ingress": [],
            "name": "terraform-eks-cluster",
            "name_prefix": "",
            "owner_id": "490167669940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-eks"
            },
            "tags_all": {
              "Name": "terraform-eks-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bbedd0ada555523"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "202.65.135.192/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3853850258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fc53b6d53f841fd0",
            "security_group_rule_id": "sgr-0fc68a9e651bc3d6a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks-cluster",
            "aws_vpc.eks",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490167669940:subnet/subnet-050e6b249727be632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050e6b249727be632",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "490167669940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-08bbedd0ada555523"
          },
          "dependencies": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490167669940:subnet/subnet-0d4a1ba5b23e22716",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4a1ba5b23e22716",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "490167669940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-08bbedd0ada555523"
          },
          "dependencies": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490167669940:vpc/vpc-08bbedd0ada555523",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ddf8165cac987466",
            "default_route_table_id": "rtb-0d838af7c5282d5b0",
            "default_security_group_id": "sg-09d8fd5f65ac7c398",
            "dhcp_options_id": "dopt-be2fa1c4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08bbedd0ada555523",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d838af7c5282d5b0",
            "owner_id": "490167669940",
            "tags": {
              "Name": "terraform-eks-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}